--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-Flask==2.3.2 # Or your specific Flask version
-requests==2.31.0 # Or your specific requests version
-pycryptodome==3.18.0 # Or your specific pycryptodome version
+Flask
+requests
+pycryptodome
